force-app/main/default/objects/Entitlement_Rule__c/Entitlement_Rule__c.object-meta.xml
<CustomObject>
    <label>Entitlement Rule</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Entitlement Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>