force-app/main/default/objects/Entitlement_Rule__c/fields/Entitlement_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Rule_Name__c</fullName>
    <label>Entitlement Rule Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>