force-app/main/default/objects/Entitlement_Rule__c/fields/Escalation_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Hierarchy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Escalation Hierarchy</label>
    <referenceTo>Escalation_Hierarchy__c</referenceTo>
    <relationshipLabel>Entitlement Rules</relationshipLabel>
    <relationshipName>Entitlement_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>