force-app/main/default/objects/Entitlement_Rule__c/recordTypes/Case_Investigation.recordType-meta.xml
<RecordType>
    <fullName>Case_Investigation</fullName>
    <active>true</active>
    <description>This is used by the StarTrack MyNetwork to separate rules for Case Investigation</description>
    <label>Case Investigation</label>
</RecordType>