force-app/main/default/objects/Entitlement_Rule__c/recordTypes/SSSW_Case.recordType-meta.xml
<RecordType>
    <fullName>SSSW_Case</fullName>
    <active>true</active>
    <description>This is used by the SSSW Project to separate rules for Cases</description>
    <label>SSSW Case</label>
</RecordType>