force-app/main/default/objects/Entitlement_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entitlement_Rule_Name__c</columns>
    <columns>Escalation_Hierarchy__c</columns>
    <columns>Active__c</columns>
    <columns>Rule__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>